--- a/gb/19/10/22/n11604104.md
+++ b/gb/19/10/22/n11604104.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yufupq384/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yufupq384/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yufupq384/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yufupq384/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yufupq384/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yufupq384/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yufupq384/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yufupq384/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yufupq384/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yufupq384/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yufupq384/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yufupq384/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yufupq384/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yufupq384/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yufupq384/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yufupq384/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yufupq384/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yufupq384/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yufupq384/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yufupq384/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yufupq384/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yufupq384/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yufupq384/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yufupq384/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>陕交警菜刀伤人被行政拘留 网民：惩处过轻</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2019年10月22日讯】近期，陕西榆林市<ahref="https://github.com/yufupq384/djy/blob/master/gb/tag/%E5%AD%90%E6%B4%B2%E5%8E%BF%E5%85%AC%E5%AE%89%E5%B1%80%E4%BA%A4%E8%AD%A6%E5%A4%A7%E9%98%9F.md#1">子洲县公安局交警大队</a>辅警<ahref="https://github.com/yufupq384/djy/blob/master/gb/tag/%E5%AE%89%E6%9F%90.md#1">安某</a>，在饭店用餐时，与一起用餐的张某发生语言冲突后，持<ahref="https://github.com/yufupq384/djy/blob/master/gb/tag/%E8%8F%9C%E5%88%80.md#1">菜刀</a>伤人。几天后，安某才被<ahref="https://github.com/yufupq384/djy/blob/master/gb/tag/%E8%A1%8C%E6%94%BF%E6%8B%98%E7%95%99.md#1">行政拘留</a>。网民对安某受到的惩处太轻表示不满。</p>
-<p>综合陆媒报导，10月19日，由微博名为“陕a万有引力”网民发出的一条“陕西榆林市子洲县交警在饭店用<ahref="https://github.com/yufupq384/djy/blob/master/gb/tag/%E8%8F%9C%E5%88%80.md#1">菜刀</a>砍人”的帖子在网上热传，隔日，在知乎上也出现类似消息，标题为“警察的菜刀还在砍人！事情就发生在昨天！”。</p>
-<p>该网民表示，19日下午3时许，弟弟张某在饭店吃饭，被同在饭店吃饭、已烂醉的子洲县警察<ahref="https://github.com/yufupq384/djy/blob/master/gb/tag/%E5%AE%89%E6%9F%90.md#1">安某</a>语言挑衅，并发生口角。随后安某用菜刀将张某砍伤，因周围有其他民众，张某被救下。</p>
-<p>帖子说，安某是<ahref="https://github.com/yufupq384/djy/blob/master/gb/tag/%E5%AD%90%E6%B4%B2%E5%8E%BF%E5%85%AC%E5%AE%89%E5%B1%80%E4%BA%A4%E8%AD%A6%E5%A4%A7%E9%98%9F.md#1">子洲县公安局交警大队</a>特勤中队队长。事后，张某到医院就医，脸部被缝合30余针。当时他们报了警，但警方未立案。</p>
-<p>10月20日，当地官方未对此事有所反应。一直到10月21日晚间，中共陕西榆林市子洲县委宣传部官方微博发通报称，子洲县公安局交警大队辅警安某，到饭馆操作间拿菜刀将张某脸部划伤，安某被<ahref="https://github.com/yufupq384/djy/blob/master/gb/tag/%E8%A1%8C%E6%94%BF%E6%8B%98%E7%95%99.md#1">行政拘留</a>。</p>
+	<p>【大纪元2019年10月22日讯】近期，陕西榆林市<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%AD%90%E6%B4%B2%E5%8E%BF%E5%85%AC%E5%AE%89%E5%B1%80%E4%BA%A4%E8%AD%A6%E5%A4%A7%E9%98%9F.md#1">子洲县公安局交警大队</a>辅警<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%AE%89%E6%9F%90.md#1">安某</a>，在饭店用餐时，与一起用餐的张某发生语言冲突后，持<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%8F%9C%E5%88%80.md#1">菜刀</a>伤人。几天后，安某才被<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%A1%8C%E6%94%BF%E6%8B%98%E7%95%99.md#1">行政拘留</a>。网民对安某受到的惩处太轻表示不满。</p>
+<p>综合陆媒报导，10月19日，由微博名为“陕a万有引力”网民发出的一条“陕西榆林市子洲县交警在饭店用<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%8F%9C%E5%88%80.md#1">菜刀</a>砍人”的帖子在网上热传，隔日，在知乎上也出现类似消息，标题为“警察的菜刀还在砍人！事情就发生在昨天！”。</p>
+<p>该网民表示，19日下午3时许，弟弟张某在饭店吃饭，被同在饭店吃饭、已烂醉的子洲县警察<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%AE%89%E6%9F%90.md#1">安某</a>语言挑衅，并发生口角。随后安某用菜刀将张某砍伤，因周围有其他民众，张某被救下。</p>
+<p>帖子说，安某是<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%AD%90%E6%B4%B2%E5%8E%BF%E5%85%AC%E5%AE%89%E5%B1%80%E4%BA%A4%E8%AD%A6%E5%A4%A7%E9%98%9F.md#1">子洲县公安局交警大队</a>特勤中队队长。事后，张某到医院就医，脸部被缝合30余针。当时他们报了警，但警方未立案。</p>
+<p>10月20日，当地官方未对此事有所反应。一直到10月21日晚间，中共陕西榆林市子洲县委宣传部官方微博发通报称，子洲县公安局交警大队辅警安某，到饭馆操作间拿菜刀将张某脸部划伤，安某被<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%A1%8C%E6%94%BF%E6%8B%98%E7%95%99.md#1">行政拘留</a>。</p>
 <p>10月22日，微博网民“陕a万有引力”的账号已清空，相关举报信息也被删除，知乎的相关信息也被删除。</p>
 <p>对此案件，多数网民表示：“故意伤害怎么会成行政拘留？难道不应该是刑事拘留吗？”</p>
 <p>有网民表示，“正编也好，副编也罢，持刀伤人，一律法办。”“普通人违法犯罪依法惩治，执法人员知法犯法罪加一等，无论事情是谁、对错与否，动手动刀伤人性命，那就应该要被严惩。”</p>
@@ -23,41 +23,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yufupq384/djy/blob/master/gb/18/6/14/n10484189.md#1">上海浦东男子小区内持刀砍人 3死6伤</a></li>
-<li><a href="https://github.com/yufupq384/djy/blob/master/gb/18/9/13/n10712374.md#1">湖南衡阳撞人砍人事件更多细节曝光</a></li>
-<li><a href="https://github.com/yufupq384/djy/blob/master/gb/18/10/26/n10810929.md#1">重庆幼儿园砍人惨案 传凶手曾喊政府不公</a></li>
-<li><a href="https://github.com/yufupq384/djy/blob/master/gb/18/10/27/n10812419.md#1">重庆幼儿园砍人案 目击者被迫发声明澄清</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/14/n10484189.md#1">上海浦东男子小区内持刀砍人 3死6伤</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/9/13/n10712374.md#1">湖南衡阳撞人砍人事件更多细节曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/26/n10810929.md#1">重庆幼儿园砍人惨案 传凶手曾喊政府不公</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812419.md#1">重庆幼儿园砍人案 目击者被迫发声明澄清</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/5/n11431635.md#1" target="_blank">共产暴政录：盛世才与新疆的几个待解问题</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/11/n11250223.md#1" target="_blank">美国北德州十城市宣布 法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/18/n13311990.md#1">美军飞行员与UFO“缠斗”27分钟 史上仅见</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/13/n13302139.md#1">轮回漫谈：前世的业力和今生的疾病</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/19/n13315848.md#1">【古韵流芳】孝贤纯皇后 乾隆追思五十年</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/18/n13313495.md#1">【百年真相】从建党到弃党 陈独秀的沉浮人生</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/16/n13308039.md#1">【舞蹈三剑客】肯塔基州路易维尔神韵演出幕后</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/22/n13323452.md#1">【财商天下】财新被打入冷宫 胡舒立惹祸</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/21/n13321160.md#1">【横河观点】回光返照？中共史上第3个历史决议</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/22/n13323529.md#1">【秦鹏直播】谁是朝阳群众？起底中共情报网</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/21/n13320435.md#1">钢琴王子李云迪被抓 被指嫖娼 官媒急发文</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/21/n13318603.md#1">【探索时分】史上最强法国柴电潜艇 台湾会买？</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/21/n13318699.md#1">【视频】沈阳一饭店燃气爆炸 致4死47伤</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/19/n13315855.md#1">孙俪携儿女摆路边摊 低调坐在路边近4小时</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/20/n13316241.md#1">转型当主持发音不准 刘涛美容牙齿惹祸？</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/21/n13320985.md#1">“钢琴王子”李云迪被指嫖娼 拘留原因引质疑</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/20/n13318235.md#1">林依晨诞下天秤座宝宝 迎39岁生日最棒礼物</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/21/n13318652.md#1">陈坤准点为周迅庆生 迄今12年没间断</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/20/n13317134.md#1">6种常被冤枉的食物 反而有益健康</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/21/n13320489.md#1">瘦身稳血糖！5分钟就做好的减糖早餐</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/16/n13308857.md#1">咖啡渣别丢！7大妙用高效除臭、去湿气</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/11/n13297107.md#1">7种大便形状暗示健康警讯 这样吃击退便秘、腹泻</a></li>
-<li><a href="https://github.com/eftthm300/djy/blob/master/gb/21/10/20/n13317846.md#1">骨松、肌少症别轻忽！7大跌倒原因一次看</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739874.md#1">【马克时空】德国“俄梦”初醒？ 援乌防空导弹、自走炮</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740139.md#1">【神韵早期节目】唐阵（2013）</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740247.md#1">【新闻看点】上海被爆加强封控 居委弄虚作假</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">任贤齐介绍田中老家 吃喝不花钱自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736847.md#1">9大体质快看你是哪种？教你调回最佳体质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yufupq384/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yufupq384/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/22/n11604104.htm">陕交警菜刀伤人被行政拘留 网民：惩处过轻</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/22/n11604104.htm">陕交警菜刀伤人被行政拘留 网民：惩处过轻</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yufupq384/djy/blob/master/gb/19/10/22/n11604104.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yufupq384/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yufupq384/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yufupq384/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yufupq384/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yufupq384/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/19/10/22/n11604104.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
