--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/21/n9756258.md#1" target="_blank">柬埔寨女儿的记忆：《他们先杀了我父亲》</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/5/n10026687.md#1" target="_blank">金剑：秦朝以后的中国是半民主社会</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11237722.md#1" target="_blank">美国麻州众议院颁发褒奖状 祝贺法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
