--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/5/n10026687.md#1" target="_blank">金剑：秦朝以后的中国是半民主社会</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11237722.md#1" target="_blank">美国麻州众议院颁发褒奖状 祝贺法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10878489.md#1" target="_blank">共产暴政录：文革中教师校长被打死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/10/16/n3402449.md#1" target="_blank">辛灏年演讲片段: 驱除马列文化 还我民族之魂</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
