--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/22/n9758393.md#1" target="_blank">刘晓：中共吹捧的商鞅非良臣 创万世恶法</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/16/n11525726.md#1" target="_blank">密州狂欢节 市长：法轮大法给世界带来美好</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403595.md#1" target="_blank">林辉：中共高官披露内幕 毛奢侈嫉妒唯我独尊</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/2/26/n2442949.md#1" target="_blank">【纪元特稿】中共打压 反助法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
